--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 <head>
 
-    <link rel="stylesheet" type="text/css" href="https://x3dom.org/download/dev/x3dom.css" />
-    <script type="text/javascript" src="https://ff.kis.v2.scr.kaspersky-labs.com/C5845A9A-AF2B-7C46-B52A-E64AB2455F58/main.js" charset="UTF-8"></script><script type="text/javascript" src="https://x3dom.org/download/dev/x3dom.js"></script>
+  <link rel="stylesheet" href="https://www.x3dom.org/download/x3dom.css" />
+    <script type="text/javascript" src="https://gc.kis.v2.scr.kaspersky-labs.com/C5845A9A-AF2B-7C46-B52A-E64AB2455F58/main.js" charset="UTF-8"></script><script src="https://www.x3dom.org/download/x3dom.js"></script>
 
 </head>
 <body>
